--- a/app/src/main/res/drawable/voice_icon.xml
+++ b/app/src/main/res/drawable/voice_icon.xml
@@ -1,10 +1,5 @@
-<vector android:height="24dp" android:tint="#000000"
-    android:viewportHeight="24" android:viewportWidth="24"
-    android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="@android:color/white" android:pathData="M20,2H4C2.9,2 2,2.9 2,4v18l4,-4h14c1.1,0 2,-0.9 2,-2V4C22,2.9 21.1,2 20,2zM20,16H6l-2,2V4h16V16z"/>
-    <path android:fillColor="@android:color/white" android:pathData="M11.25,5h1.5v10h-1.5z"/>
-    <path android:fillColor="@android:color/white" android:pathData="M8.5,7h1.5v6h-1.5z"/>
-    <path android:fillColor="@android:color/white" android:pathData="M6,9h1.5v2h-1.5z"/>
-    <path android:fillColor="@android:color/white" android:pathData="M14,7h1.5v6h-1.5z"/>
-    <path android:fillColor="@android:color/white" android:pathData="M16.5,9h1.5v2h-1.5z"/>
+<vector xmlns:android="http://schemas.android.com/apk/res/android" android:height="24dp" android:tint="#000000" android:viewportHeight="24" android:viewportWidth="24" android:width="24dp">
+      
+    <path android:fillColor="@android:color/white" android:pathData="M12,15c1.66,0 2.99,-1.34 2.99,-3L15,6c0,-1.66 -1.34,-3 -3,-3S9,4.34 9,6v6c0,1.66 1.34,3 3,3zM17.3,12c0,3 -2.54,5.1 -5.3,5.1S6.7,15 6.7,12L5,12c0,3.42 2.72,6.23 6,6.72L11,22h2v-3.28c3.28,-0.48 6,-3.3 6,-6.72h-1.7z"/>
+    
 </vector>
